# pds

./: .clangd  .gitignore  CMakeLists.txt  Dockerfile  Readme.md  check_graph.cpp  drawGrid.cpp  experiment.cpp  frb30-15-5.graph  main.cpp  percentPropagating.cpp  random_trees.cpp  shave_graph.cpp  socfb-MIT.mtxUniform-2.graph
cmake/: FindGurobi.cmake
experiments/: cases.txt  run_bounds_experiment.sh  run_reduction_experiment.sh  run_solver_experiment.sh
include/: draw_grid.hpp  fort_solve.hpp  graphio.hpp  gurobi_common.hpp  gurobi_solve.hpp  map.hpp  pds.hpp  pdssolve.hpp  utility.hpp
inputs/: 1-LV-rural3--2-no_sw.graphml  1-MV-semiurb--1-sw.graphml  1-MV-urban--1-sw.graphml  1-complete_data-mixed-all-0-sw.graphml  cactus10.graphml  cactus100.graphml  cactus1000.graphml  cactus10000.graphml  cactus20000.graphml  cactus500.graphml  case118.graphml  case11_iwamoto.graphml  case1354pegase.graphml  case14.graphml  case145.graphml  case1888rte.graphml  case24_ieee_rts.graphml  case2848rte.graphml  case2869pegase.graphml  case30.graphml  case300.graphml  case3120sp.graphml  case33bw.graphml  case39.graphml  case4gs.graphml  case5.graphml  case57.graphml  case6470rte.graphml  case6495rte.graphml  case6515rte.graphml  case6ww.graphml  case89pegase.graphml  case9.graphml  case9241pegase.graphml  case_ieee30.graphml  case_illinois200.graphml  pandapower_to_graphml.py  powersimdata_export.py  psd-Texas.graphml  psd-Western.graphml  (+6 more)
inputs/testgraphs/: case118.ptxt  case145.ptxt  case1888rte.ptxt  case1951rte.ptxt  case2383wp.ptxt  case2736sp.ptxt  case2737sop.ptxt  case2746wop.ptxt  case2746wp.ptxt  case2848rte.ptxt  case2868rte.ptxt  case3012wp.ptxt  case3375wp.ptxt  case6468rte.ptxt  case6470rte.ptxt  case_illinois200.ptxt
patch/: 0001-removed-redundant-template-parameters-in-DualGraphBa.patch
src/pds/: draw_grid.cpp  fort_solve.cpp  graphio.cpp  gurobi_solve.cpp  pds.cpp  pdssolve.cpp
testgraphs/: CMakeLists.txt  converter.cpp
